--- a/charts/dataplane/templates/metabase/ingress.yaml
+++ b/charts/dataplane/templates/metabase/ingress.yaml
@@ -1,11 +1,11 @@
 ---
-{{- if .Values.ingress.enabled -}}
+{{- if .Values.metabase.ingress.enabled -}}
 {{- $fullName := include "dataplane.fullname" . -}}
-{{- $secretName := include "dataplane.ingress.secretName" . -}}
-{{- $svcPort := .Values.service.port -}}
-{{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
-  {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
-  {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
+{{- $secretName := include "dataplane.metabase.ingress.secretName" . -}}
+{{- $svcPort := .Values.metabase.service.port -}}
+{{- if and .Values.metabase.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
+  {{- if not (hasKey .Values.metabase.ingress.annotations "kubernetes.io/ingress.class") }}
+  {{- $_ := set .Values.metabase.ingress.annotations "kubernetes.io/ingress.class" .Values.metabase.ingress.className}}
   {{- end }}
 {{- end }}
 {{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
@@ -20,17 +20,17 @@ metadata:
   name: {{ $fullName }}
   labels:
     {{- include "dataplane.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
+  {{- with .Values.metabase.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
-  ingressClassName: {{ .Values.ingress.className }}
+  {{- if and .Values.metabase.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
+  ingressClassName: {{ .Values.metabase.ingress.className }}
   {{- end }}
   tls:
     - hosts:
-        - "{{ .Values.ingress.hostName }}"
+        - "{{ .Values.metabase.ingress.hostName }}"
       secretName: {{ $secretName }}
   rules:
     - host: {{ .host | quote }}
