--- a/charts/dataplane/templates/metabase/service.yaml
+++ b/charts/dataplane/templates/metabase/service.yaml
@@ -6,9 +6,9 @@ metadata:
   labels:
     {{- include "dataplane.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ .Values.metabase.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.metabase.service.port }}
       targetPort: http
       protocol: TCP
       name: http
