--- a/charts/dataplane/templates/metabase/ingress.yaml
+++ b/charts/dataplane/templates/metabase/ingress.yaml
@@ -1,6 +1,6 @@
 ---
 {{- if .Values.metabase.ingress.enabled -}}
-{{- $fullName := include "dataplane.fullname" . -}}
+{{- $fullName := include "dataplane.metabase.fullname" . -}}
 {{- $secretName := include "dataplane.metabase.ingress.secretName" . -}}
 {{- $svcPort := .Values.metabase.service.port -}}
 {{- if and .Values.metabase.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
