--- a/charts/dataplane/values.yaml
+++ b/charts/dataplane/values.yaml
@@ -3,6 +3,19 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+strimzi:
+
+  broker:
+    version: "2.7.0"
+    replicas: 3
+    number: 4
+    annotations: {}
+    listener:
+      plain: 9092
+      tls: 9093
+      externa: 9094
+      annotations: []
+
 zalando:
 
   metabase:
