--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -39,6 +39,7 @@ provisioner:
           k8s_zalando_deploy: true
           k8s_nginx_deploy: true
           k8s_molecule_cluster_type: kind
+          k8s_zalando_storage_class: standard
 
           # kind vardefs
           kind_bin: ${MOLECULE_EPHEMERAL_DIRECTORY}/kind
