--- a/charts/dataplane/Chart.yaml
+++ b/charts/dataplane/Chart.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v2
 name: dataplane
-description: A Helm chart to deploy and configure Metabase
+description: A Helm chart to deploy and configure Dataplane
 
 # A chart can be either an 'application' or a 'library' chart.
 #
