--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "nephelaiio.k8s-cdc"
+name = "dataplane"
 version = "0.1.0"
 description = ""
 authors = ["Teodoro Cook <teodoro.cook@gmail.com>"]
