Clean up makefile target messages

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -11,6 +11,7 @@
     k8s_verify: true
     k8s_strimzi_verify: false
     k8s_ingress_verify: false
+    k8s_zalando_verify: false
     k8s_volume_verify: false
 
   roles:
