--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -11,6 +11,29 @@
 
   tasks:
 
+    - name: wait for strimzi operator startup
+      ansible.builtin.fail:
+        msg: "the following operators are in failed status [{{ operator_failed | join(', ') }}]"
+      vars:
+        operator_failed: "{{ operator_status | rejectattr('status.phase', 'equalto', 'Succeeded') | map(attribute='metadata.name') }}"
+        operator_status: "{{ operator_query | selectattr('status', 'defined') }}"
+        operator_phase: "{{ operator_status | selectattr('status.phase', 'defined') }}"
+        operator_query: "{{
+          query(
+            'kubernetes.core.k8s',
+            api_version='operators.coreos.com/v1alpha1',
+            kind='ClusterServiceVersion',
+            kubeconfig=k8s_kubeconfig
+          )
+        }}"
+      retries: 15
+      delay: 30
+      until: operator_failed | length == 0
+      failed_when:
+        - (operator_status | length) != (operator_query | length)
+        - (operator_phase | length) != (operator_query | length)
+        - operator_failed | length > 0
+
     - name: create metabase namespace
       kubernetes.core.k8s:
         state: present
