Add initial helm chart assets (#1)
* Add metabase chart

* Move pyproject.toml to legacy syntax

* Set appVersion for metabase chart

* Add metabase cluster to deployment

* Add warehouse cluster to deployment

* Pin test releases for kind/k8s

* Add kind v0.16.0 to test scenarios

* Update clean makefile target

* Clean up makefile target messages

* Add kafka broker template

* Add README

* Add github action definitions

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -5,15 +5,19 @@
 
   gather_facts: false
 
+  vars:
+
+    k8s_deploy: true
+    k8s_verify: false
+
   roles:
 
     - nephelaiio.plugins
+    - nephelaiio.k8s
 
   tasks:
 
-    - name: deploy cluster
-      include_role:
-        name: nephelaiio.k8s
-      vars:
-        k8s_deploy: true
-        k8s_verify: false
+    - name: install postgresql binary
+      ansible.builtin.package:
+        name: postgresql-client
+      become: yes
