--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -4,12 +4,18 @@ dependency:
   options:
     role-file: requirements.yml
     requirements-file: requirements.yml
+
 platforms:
   - name: localhost
+
 driver:
   name: delegated
+
 provisioner:
   name: ansible
+  config_options:
+    defaults:
+      callbacks_enabled: ansible.posix.profile_tasks
   inventory:
     hosts:
       all:
@@ -20,24 +26,56 @@ provisioner:
           docker_net_addr: 172.19.0.0/16
 
           # k8s vardefs
-          k8s_kubeconfig: ${MOLECULE_EPHEMERAL_DIRECTORY}/config
-          k8s_certmanager_issuer: local
-          k8s_cluster_name: molecule.nephelai.io
           k8s_address_pool_private_iprange: 172.19.1.0/24
           k8s_address_pool_public_iprange: 172.19.2.0/24
+          k8s_kubeconfig: ${MOLECULE_EPHEMERAL_DIRECTORY}/config
+          k8s_certmanager_issuer_name: local
+          k8s_cluster_name: molecule.nephelai.io
           k8s_metallb_speaker_secret: secret
           k8s_verifier_path: ${MOLECULE_EPHEMERAL_DIRECTORY}
-          k8s_longhorn_deploy: true
-          k8s_awxoperator_deploy: true
           k8s_helm_bin: ${MOLECULE_EPHEMERAL_DIRECTORY}/helm
-          k8s_wait_timeout: 120
+          k8s_wait_timeout: 500
+          k8s_strimzi_deploy: true
+          k8s_argocd_deploy: false
+          k8s_longhorn_deploy: false
+          k8s_awxoperator_deploy: false
+          k8s_zalando_deploy: true
+          k8s_nginx_deploy: true
+          k8s_molecule_cluster_type: kind
+          k8s_zalando_storage_class: standard
 
           # kind vardefs
           kind_bin: ${MOLECULE_EPHEMERAL_DIRECTORY}/kind
           kind_net_addr: 172.19.0.0/24
-          kind_cluster_name: molecule-dataplane
+          kind_cluster_name: molecule-cdc
           kind_kubeconfig: "{{ k8s_kubeconfig }}"
-          kind_release_tag: latest
+          kind_multinode: false
+
+          # test vardefs
+          dataplane_pagila_namespace: dataplane
+          dataplane_pagila_team: pagila
+          dataplane_pagila_user: metabase
+          dataplane_pagila_db: db
+
+          # dataplane vardefs
+          dataplane_namespace: dataplane
+          dataplane_chart: dataplane
+          dataplane_path: ${MOLECULE_PROJECT_DIRECTORY}
+          dataplane_metabase_hostname: "metabase.{{ k8s_cluster_name }}"
 
 verifier:
   name: ansible
+scenario:
+  test_sequence:
+    - dependency
+    - lint
+    - cleanup
+    - destroy
+    - syntax
+    - create
+    - prepare
+    - converge
+    - verify
+    - side_effect
+    - cleanup
+    - destroy
