--- a/requirements.yml
+++ b/requirements.yml
@@ -2,6 +2,8 @@
 roles:
   - nephelaiio.plugins
   - nephelaiio.kind
+  - nephelaiio.k8s
   - geerlingguy.helm
 collections:
   - community.general
+  - community.postgresql
