--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ netaddr = "^0.8.0"
 MarkupSafe = "2.0.1"
 psycopg2-binary = "^2.9.3"
 
+[tool.poetry.group.dev.dependencies]
+docker = "^6.0.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
