--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -49,6 +49,10 @@
               storage:
                 size: 10Gi
                 class: standard
+              config:
+                offsets.topic.replication.factor: 1
+                transaction.state.log.replication.factor: 1
+                transaction.state.log.min.isr: 1
             zookeeper:
               storage:
                 size: 10Gi
