--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -47,7 +47,7 @@ provisioner:
           # kind vardefs
           kind_bin: ${MOLECULE_EPHEMERAL_DIRECTORY}/kind
           kind_net_addr: 172.19.0.0/24
-          kind_cluster_name: molecule-cdc
+          kind_cluster_name: molecule-dataplane
           kind_kubeconfig: "{{ k8s_kubeconfig }}"
           kind_multinode: false
 
