--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,19 +7,17 @@ authors = ["Teodoro Cook <teodoro.cook@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 
-[tool.poetry.dev-dependencies]
-molecule = "^4.0.1"
+[tool.poetry.group.dev.dependencies]
+docker = "^6.0.0"
+molecule = "^3.6.1"
 kubernetes = "^24.2.0"
 openshift = "^0.13.1"
 jmespath = "^1.0.1"
-docker = "^6.0.0"
 ansible = "^6.3.0"
 netaddr = "^0.8.0"
 MarkupSafe = "2.0.1"
 psycopg2-binary = "^2.9.3"
-
-[tool.poetry.group.dev.dependencies]
-docker = "^6.0.0"
+docker-compose = "^1.29.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
