Restore k8s version management

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -64,4 +64,5 @@ jobs:
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
-          K8S_RELEASE: ${{ matrix.image }}
+          KIND_RELEASE: ${{ matrix.release }}
+          KIND_IMAGE: ${{ matrix.image }}
