Add quay repository deployment to helm chart

--- a/connect/Dockerfile
+++ b/connect/Dockerfile
@@ -1,4 +1,2 @@
-ARG KAFKA_RELEASE
-FROM quay.io/strimzi/kafka:latest-kafka-${KAFKA_RELEASE}
-USER root:root
-USER 1001
+FROM phusion/baseimage:latest
+    MAINTAINER Ted Cook <teodoro.cook@gmail.com>
