--- a/charts/dataplane/values.yaml
+++ b/charts/dataplane/values.yaml
@@ -5,6 +5,9 @@ fullnameOverride: ""
 
 strimzi:
 
+  debezium:
+    version: 2.9.6.Final
+
   kafka:
     version: "3.2.3"
     replicas: 3
@@ -22,6 +25,14 @@ strimzi:
     storage:
       size: 10Gi
       class: ""
+
+  connect:
+    image: nephelaiio/dataplane-connect:latest
+    replicas: 3
+    config: {}
+    annotations:
+      strimzi.io/use-connector-resources: "true"
+
   zookeeper:
     replicas: 3
     storage:
