--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -60,7 +60,7 @@ jobs:
         run: poetry install
 
       - name: install make
-        run: apt-get install -y make
+        run: sudo apt-get install -y make
 
       - name: create molecule test scenario
         run: make molecule create -- -s ${{ matrix.scenario }}
