Add Kafka Connect cluster (#2)
* Update README

* Add docker build targets to makefile

* Create strimzi chart helpers

* Add connect Dockerfile

* Clean up molecule play tasks moved to kind role

* Update README

* Add port wait task to test converge play

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -59,9 +59,32 @@ jobs:
       - name: install pips
         run: poetry install
 
-      - name: run molecule tests.
-        run: poetry run molecule test -s ${{ matrix.scenario }}
+      - name: install make
+        run: sudo apt-get install -y make
+
+      - name: create molecule test scenario
+        run: make molecule create -- -s ${{ matrix.scenario }}
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
-          K8S_RELEASE: ${{ matrix.image }}
+          KIND_RELEASE: ${{ matrix.release }}
+          KIND_IMAGE: ${{ matrix.image }}
+
+      - name: publish test images
+        run: make images
+
+      - name: converge molecule test scenario
+        run: make molecule converge -- -s ${{ matrix.scenario }}
+        env:
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          KIND_RELEASE: ${{ matrix.release }}
+          KIND_IMAGE: ${{ matrix.image }}
+
+      - name: verify molecule test scenario
+        run: make molecule verify -- -s ${{ matrix.scenario }}
+        env:
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          KIND_RELEASE: ${{ matrix.release }}
+          KIND_IMAGE: ${{ matrix.image }}
